--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -6,22 +6,34 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 8px auto;
+  padding: 8px;
 }
 
 .title {
+  font-size: 24px;
   background: #e3f4ff;
+  padding: 8px;
+  margin: 0px 0px 8px 0px;
+  
 }
 
 .content {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 8px 0px;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  padding: 8px;
 }
 
 button {
+  display: block;
   background: white;
+  margin: 0px auto;
   border: 1px solid #eee;
+  padding: 8px 24px;
 }
