--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,11 +15,37 @@ body {
   justify-content: center;
 }
 
+.buttons {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.left-side {
+  padding: 8px;
+}
+
+.right-side {
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8px;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 8px;
+  flex-direction: row;
+  
+}
+
+.header {
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .icon {
@@ -33,6 +59,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.top-right {
+  display: flex;
+  justify-content: space-between;
 }
 
 .close-button {
